Update CSV file path for dataset loading

--- a/ab_testing.ipynb
+++ b/ab_testing.ipynb
@@ -71,7 +71,7 @@
    "source": [
     "# Importing the dataset\n",
     "\n",
-    "data = pd.read_csv(r\"C:\\Users\\Rushikesh\\Desktop\\Projects\\Website Redesign\\redesign.csv\")"
+    "data = pd.read_csv(r\"data\redesign")"
    ]
   },
   {
