--- a/ab_testing.ipynb
+++ b/ab_testing.ipynb
@@ -71,7 +71,7 @@
    "source": [
     "# Importing the dataset\n",
     "\n",
-    "data = pd.read_csv(r\"data\redesign")"
+    "data = pd.read_csv(r\"data/redesign")"
    ]
   },
   {
